builds.
----------------------------------------------------------------------
Wed Apr 14 20:19:18 2004                        Michael Jennings (mej)

Include spec file in post-build tree.
----------------------------------------------------------------------
Mon Apr 19 22:56:06 2004                        Michael Jennings (mej)

Moved config hash to object hash to allow multiple simultaneous config
objects to exist independently.

Removed unused member functions based on key names.  Too hairy.

Enabled configuration file for buildtool.
----------------------------------------------------------------------
Mon May 10 10:39:31 2004                        Michael Jennings (mej)

Minor module changes to help prevent warnings.
----------------------------------------------------------------------
Mon May 10 10:46:16 2004                        Michael Jennings (mej)

Added instroot pool to buildtool to save copy/delete time.

Moved some oft-used functionality to Util.pm.
----------------------------------------------------------------------
Mon May 10 10:42:57 2004                        Michael Jennings (mej)

Don't die on STOP signals.
----------------------------------------------------------------------
Mon May 17 21:50:04 2004                        Michael Jennings (mej)

Fixed minor hint installer bug.
----------------------------------------------------------------------
Fri Jun  4 13:15:28 2004                        Michael Jennings (mej)

Lots of stuff here including building a directory full of SPM's.
----------------------------------------------------------------------
Fri Jun  4 16:30:09 2004                        Michael Jennings (mej)

Fixed mid-module import.
----------------------------------------------------------------------
Thu Jun 10 17:04:18 2004                        Michael Jennings (mej)

Fixed several bugs nabbed by Greg Kurtzer <greg@caosity.org>.
----------------------------------------------------------------------