@@ -475,3 +475,8 @@ Thu Jun 10 17:04:18 2004                        Michael Jennings (mej)
 
 Fixed several bugs nabbed by Greg Kurtzer <greg@caosity.org>.
 ----------------------------------------------------------------------
+Fri Jun 18 14:09:59 2004                        Michael Jennings (mej)
+
+When importing new packages from SRPM's, always include an initial
+ChangeLog entry.  Hopefully this is it for 1.7 final.
+----------------------------------------------------------------------
